# daynimal

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  CLAUDE.md  README.md  generate_architecture.py  pyproject.toml
benchmarks/: search_relevance.py
daynimal/: __init__.py  app.py  attribution.py  config.py  connectivity.py  debug.py  image_cache.py  main.py  notifications.py  repository.py  schemas.py
daynimal/db/: __init__.py  build_db.py  export_taxref_tsv.py  first_launch.py  generate_distribution.py  import_gbif.py  import_gbif_fast.py  import_gbif_utils.py  import_taxref_french.py  import_taxref_french_fast.py  import_taxref_tsv.py  init_fts.py  migrate_add_favorites.py  migrate_add_history.py  migrate_add_user_settings.py  models.py  session.py
daynimal/resources/: __init__.py  phylopic_metadata.csv
daynimal/sources/: __init__.py  base.py  commons.py  gbif_media.py  phylopic_local.py  wikidata.py  wikipedia.py
daynimal/ui/: __init__.py  app_controller.py  state.py
debug/: DEBUGGING.md  QUICK_START_DEBUG.md  README.md  README_DEBUG.md  TEST_RESULTS.md  debug_filter.py  run_app_debug.py  view_logs.py
docs/: ANDROID_DEV_GUIDE.md  CODE_REVIEW_2026-02.md  DISTRIBUTION_RELEASE.md  ERROR_LOGGING.md  FLET_API_GUIDE.md  FLET_APP_VALIDATION.md  MOBILE_DESKTOP_ROADMAP.md  PHYLOPIC.md  README.md  TAXREF.md  UI_AUDIT.md  UI_REFACTORING_STATUS.md
docs/changes/: 2026-02-08-phase1-infrastructure-ui.md  2026-02-08-phase2-search-view.md  2026-02-08-phase3-search-refactor.md  2026-02-08-refactor-distribution-pipeline-results.md  README.md  (+4 more)
scripts/: download_phylopic.py  prepare_release.py  screenshot_ui.py
tests/: __init__.py  conftest.py  test_app.py  test_attribution.py  test_build_db.py  test_cli.py  test_cli_extended.py  test_commons.py  test_commons_extended.py  test_config.py  test_connectivity.py  test_debug.py  test_first_launch.py  test_format_enrichment.py  test_gbif_media.py  test_generate_distribution.py  test_history.py  test_http_resilience.py  test_image_cache.py  test_import_gbif_utils.py  test_init_fts_extended.py  test_notifications.py  test_phylopic.py  test_repository_advanced.py  test_repository_edge_cases.py  test_repository_enrichment.py  test_repository_favorites.py  test_repository_parallel.py  test_repository_settings.py  test_schemas.py  test_sharing.py  test_sources_base.py  test_wikidata.py  test_wikipedia.py
(+43 files in other folders)
