[project]
name = "daynimal"
version = "0.1.0"
description = "Daily animal discovery app - learn about one animal per day"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.scripts]
daynimal = "daynimal.main:main"
import-gbif = "daynimal.db.import_gbif:main"
import-gbif-fast = "daynimal.db.import_gbif_fast:main"
init-fts = "daynimal.db.init_fts:init_fts"
migrate-history = "daynimal.db.migrate_add_history:migrate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
# Do not complain about unused imports in __init__ files.
"__init__.py" = ["F401"]

[tool.ruff.format]
# Collapse lines even if they contain commas
skip-magic-trailing-comma = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    'raise NotImplementedError',
]
