[project]
name = "daynimal"
version = "0.1.0"
description = "Daily animal discovery app - learn about one animal per day"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "flet>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]

[project.scripts]
daynimal = "daynimal.main:main"
daynimal-app = "daynimal.app:main"
generate-distribution = "daynimal.db.generate_distribution:main"
build-db = "daynimal.db.build_db:main"
init-fts = "daynimal.db.init_fts:main"
migrate-history = "daynimal.db.migrate_add_history:migrate"
migrate-favorites = "daynimal.db.migrate_add_favorites:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
# Do not complain about unused imports in __init__ files.
"__init__.py" = ["F401"]

[tool.ruff.format]
# Collapse lines even if they contain commas
skip-magic-trailing-comma = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    'raise NotImplementedError',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
